--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
     <!-- Default twitter cards -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://googlechromelabs.github.io/text-editor/">
-    <meta name="twitter:title" content="Text Editor">
+    <meta name="twitter:title" content="Experimental tool">
     <meta name="twitter:description" content="Text Editor - Demo for the HTML5 File System Access API.">
     <meta name="twitter:image" content="./images/icon-192.png">
     <meta name="twitter:creator" content="@petele">
@@ -123,28 +123,7 @@
             </button>
           </div>
         </div>
-        <div id="menuView" class="menuContainer">
-          <button id="butView" class="menuTop" aria-label="View" aria-haspopup="true" aria-expanded="false">
-              <span class="kbdShortcut">V</span>iew
-          </button>
-          <div role="menu" class="menuItemContainer hidden">
-            <button id="butWordWrap" type="button" aria-checked="true" role="menuitemcheckbox">
-              Word Wrap
-            </button>
-            <button id="butMonospace" type="button" aria-checked="false" role="menuitemcheckbox">
-              Monospace Font
-            </button>
-            <button id="butCaptureTabs" type="button" aria-checked="true" role="menuitemcheckbox">
-              Capture Tabs <kbd>^&uparrow;M</kbd>
-            </button>
-            <button id="butFontBigger" type="button" role="menuitem">
-              Increase Font Size
-            </button>
-            <button id="butFontSmaller" type="button" role="menuitem">
-              Decrease Font Size
-            </button>
-          </div>
-        </div>
+        
         <div id="menuInstall" class="menuContainer">
           <button id="butInstall" aria-label="Install" class="menuTop hidden">
               <span class="kbdShortcut">I</span>nstall
