--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
         in legacy mode. In legacy mode, the file modified indicators are not shown.
       </div>
       <div>
-        Text Editor is a simple text editor similar to notepad that makes
+        Testing Text Editor is a simple text editor similar to notepad that makes
         it easy to edit text files on your local file system. It shows how
         to easily use the new HTML5 File System Access APIs. To learn more
         about the File System Access APIs and how this demo was built, check out
